--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "hootlex/laravel-friendships": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
