--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.1"
   },
   "dependencies": {
     "laravel-echo": "^1.1.1",
