--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "hootlex/laravel-friendships": "^1.0",
-        "predis/predis": "^1.1",
-        "laravel/passport": "^1.0"
+        "laravel/passport": "^1.0",
+        "pusher/pusher-php-server": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
